Add support for the CSSPageDescriptors and CSSPositionTryDescriptors interfaces https://bugs.webkit.org/show_bug.cgi?id=290145
Reviewed by Antti Koivisto.

Extracted out non-style rule CSSStyleDeclaration code from CSSFontFaceDescriptors
into a new base class PropertySetCSSDescriptors, and use it for CSSFontFaceDescriptors,
CSSPageDescriptors and CSSPositionTryDescriptors.

https://drafts.csswg.org/cssom/#csspagedescriptors (CSSPageDescriptors)
https://drafts.csswg.org/css-anchor-position-1/#csspositiontrydescriptors (CSSPositionTryDescriptors)

To make implementing these simpler, the bindings code generator has been updated
to turn IDL attributes and operations with hyphens in their name into title case.
This allows us to avoid a bunch of unnecessary ImplementedAs=* boilerplate.

Also cleanup CSSOM IDL files, updating URLs, adding commented out missing
attributes and operations, and separating out partial interfaces/mixins
into their own IDL files.

* LayoutTests/imported/w3c/web-platform-tests/css/css-anchor-position/at-position-try-cssom-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/css-page/cssom/margin-001.html:
* LayoutTests/imported/w3c/web-platform-tests/css/css-page/cssom/page-002.html:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/idlharness-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/css/cssom/idlharness.html:
* Source/WebCore/CMakeLists.txt:
* Source/WebCore/DerivedSources-input.xcfilelist:
* Source/WebCore/DerivedSources-output.xcfilelist:
* Source/WebCore/DerivedSources.make:
* Source/WebCore/Sources.txt:
* Source/WebCore/WebCore.xcodeproj/project.pbxproj:
* Source/WebCore/bindings/js/JSCSSStyleDeclarationCustom.cpp:
* Source/WebCore/bindings/js/WebCoreBuiltinNames.h:
* Source/WebCore/bindings/scripts/CodeGenerator.pm:
* Source/WebCore/bindings/scripts/CodeGeneratorJS.pm:
* Source/WebCore/bindings/scripts/test/JS/JSTestObj.cpp:
* Source/WebCore/bindings/scripts/test/TestObj.idl:
* Source/WebCore/css/CSSContai

--- a/Source/WebCore/CMakeLists.txt
+++ b/Source/WebCore/CMakeLists.txt
@@ -981,9 +981,11 @@ set(WebCore_NON_SVG_IDL_FILES
     css/CSSMediaRule.idl
     css/CSSNamespaceRule.idl
     css/CSSNestedDeclarations.idl
+    css/CSSPageDescriptors.idl
+    css/CSSPageRule.idl
     css/CSSPaintCallback.idl
     css/CSSPaintSize.idl
-    css/CSSPageRule.idl
+    css/CSSPositionTryDescriptors.idl
     css/CSSPositionTryRule.idl
     css/CSSPropertyRule.idl
     css/CSSRule.idl
@@ -992,11 +994,11 @@ set(WebCore_NON_SVG_IDL_FILES
     css/CSSStartingStyleRule.idl
     css/CSSStyleDeclaration.idl
     css/CSSStyleProperties.idl
+    css/CSSStyleRule+Typedom.idl
     css/CSSStyleRule.idl
     css/CSSStyleSheet.idl
     css/CSSSupportsRule.idl
     css/CSSViewTransitionRule.idl
-    css/DocumentOrShadowRoot+CSSOM.idl
     css/DOMCSSCustomPropertyDescriptor.idl
     css/DOMCSSNamespace+CSSNumericFactory.idl
     css/DOMCSSNamespace+CSSPainting.idl
@@ -1012,6 +1014,7 @@ set(WebCore_NON_SVG_IDL_FILES
     css/DeprecatedCSSOMRect.idl
     css/DeprecatedCSSOMValue.idl
     css/DeprecatedCSSOMValueList.idl
+    css/ElementCSSInlineStyle+Typedom.idl
     css/ElementCSSInlineStyle.idl
     css/FontFace.idl
     css/FontFaceSet.idl
@@ -1128,17 +1131,18 @@ set(WebCore_NON_SVG_IDL_FILES
     dom/Document.idl
     dom/DocumentAndElementEventHandlers.idl
     dom/DocumentFragment.idl
+    dom/DocumentOrShadowRoot+CSSOM.idl
     dom/DocumentOrShadowRoot+Fullscreen.idl
     dom/DocumentOrShadowRoot+PointerLock.idl
     dom/DocumentOrShadowRoot.idl
     dom/DocumentType.idl
     dom/DragEvent.idl
     dom/Element+CSSOMView.idl
-    dom/Element+ComputedStyleMap.idl
     dom/Element+DOMParsing.idl
     dom/Element+Fullscreen.idl
     dom/Element+PointerEvents.idl
     dom/Element+PointerLock.idl
+    dom/Element+Typedom.idl
     dom/Element.idl
     dom/ElementContentEditable.idl
     dom/ElementCreationOptions.idl
