--- a/Source/WebCore/css/CSSValueKeywords.in
+++ b/Source/WebCore/css/CSSValueKeywords.in
@@ -282,6 +282,7 @@ accentcolortext
 -apple-system-tertiary-label enable-if=WTF_PLATFORM_COCOA
 -apple-system-tertiary-fill enable-if=WTF_PLATFORM_COCOA
 -apple-system-quaternary-label enable-if=WTF_PLATFORM_COCOA
+-apple-system-quinary-label enable-if=WTF_PLATFORM_MAC
 -apple-system-grid enable-if=WTF_PLATFORM_COCOA
 -apple-system-separator enable-if=WTF_PLATFORM_COCOA
 -apple-system-container-border enable-if=WTF_PLATFORM_COCOA
