Workaround malformed PGO profile gets produced in some configurations. https://bugs.webkit.org/show_bug.cgi?id=290323 rdar://146134116
Reviewed by Alexey Proskuryakov and Elliott Williams.

Use empty dirty data list on some SDK versions to work around malformed PGO profile issue.

* Source/JavaScriptCore/Configurations/BaseTarget.xcconfig:
* Source/WebCore/Configurations/WebCore.xcconfig:
* Source/WebKit/Configurations/BaseTarget.xcconfig:

Canonical link: https://commits.webkit.org/292634@main

--- a/Source/WebKit/Configurations/BaseTarget.xcconfig
+++ b/Source/WebKit/Configurations/BaseTarget.xcconfig
@@ -60,6 +60,12 @@ CLANG_USE_OPTIMIZATION_PROFILE_YES_Production_xros = YES;
 CLANG_INSTRUMENT_FOR_OPTIMIZATION_PROFILING = $(CLANG_INSTRUMENT_FOR_OPTIMIZATION_PROFILING_$(ENABLE_LLVM_PROFILE_GENERATION));
 CLANG_INSTRUMENT_FOR_OPTIMIZATION_PROFILING_ENABLE_LLVM_PROFILE_GENERATION = YES;
 
+// Remove below workaround once fix from rdar://146134116 is universally available in all supported configurations.
+LLVM_PROFILE_GENERATION_OTHER_LD_FLAGS = $(LLVM_PROFILE_GENERATION_OTHER_LD_FLAGS_$(ENABLE_LLVM_PROFILE_GENERATION))
+LLVM_PROFILE_GENERATION_OTHER_LD_FLAGS_ENABLE_LLVM_PROFILE_GENERATION = -Wl,-dirty_data_list,/dev/null;
+
+OTHER_LDFLAGS = $(inherited) $(LLVM_PROFILE_GENERATION_OTHER_LD_FLAGS);
+
 OTHER_CFLAGS = $(inherited) -iframework $(SDK_DIR)$(SYSTEM_LIBRARY_DIR)/PrivateFrameworks -D__STDC_WANT_LIB_EXT1__=1;
 
 // FIXME: This shouldn't be computing path from scratch, the computation should be shared.
