--- a/Source/JavaScriptCore/Configurations/BaseTarget.xcconfig
+++ b/Source/JavaScriptCore/Configurations/BaseTarget.xcconfig
@@ -32,3 +32,9 @@ PRODUCT_NAME = JavaScriptCore;
 
 CLANG_INSTRUMENT_FOR_OPTIMIZATION_PROFILING = $(CLANG_INSTRUMENT_FOR_OPTIMIZATION_PROFILING_$(ENABLE_LLVM_PROFILE_GENERATION));
 CLANG_INSTRUMENT_FOR_OPTIMIZATION_PROFILING_ENABLE_LLVM_PROFILE_GENERATION = YES;
+
+// Remove below workaround once fix from rdar://146134116 is universally available in all supported configurations.
+LLVM_PROFILE_GENERATION_OTHER_LD_FLAGS = $(LLVM_PROFILE_GENERATION_OTHER_LD_FLAGS_$(ENABLE_LLVM_PROFILE_GENERATION))
+LLVM_PROFILE_GENERATION_OTHER_LD_FLAGS_ENABLE_LLVM_PROFILE_GENERATION = -Wl,-dirty_data_list,/dev/null;
+
+OTHER_LDFLAGS = $(inherited) $(LLVM_PROFILE_GENERATION_OTHER_LD_FLAGS);
