GPUP: ImageBuffer::putPixelBuffer spends time copying data at GPUP side https://bugs.webkit.org/show_bug.cgi?id=290298 rdar://147725500
Reviewed by Simon Fraser.

ImageBuffer::putPixelBuffer(PixelBuffer&) would require that the
caller holds a real PixelBuffer. Holding such a object means that the
object owns the data and that the data is mutable. This meant that
RemoteImageBuffer had to copy the data from the IPC buffers.

Fix by making the API more narrow in form of
ImageBuffer::putImageData(PixelBufferSourceView).

PixelBufferSourceView can reference the buffer data directly for the
duration of the call and convey that the data is immutable.

Theoretically ImageBuffer::putPixelBuffer(SomethingReffable&) could
support API that would allow for more efficient data passing, in form
of a pattern:
  Ref passablePixelBuffer = imageBuffer->allocatePixelBuffer(...);
  fillPixelBuffer(passablePixelBuffer, ...);
  imageBuffer->putPixelBuffer(passablePixelBuffer, ...);

However, it wasn't implemented and in pratice it is not that realistic.
Primarily, the web-facing APIs cannot use the right allocate at the time
the allocation happens from the web side (new ImageData(..)). The
putPixelBuffer API as it is today couldn't store a reference and read it
later, since the reference was of mutable PixelBuffer.

If the above pattern is needed for non-web facing APIs (filter usage),
a distinct API call that really supports it can be added separately.
The lowest level implemenation of such a API will still use the
PixelBufferSourceView added here.

* Source/WebCore/html/ImageBitmap.cpp:
(WebCore::ImageBitmap::createCompletionHandler):
* Source/WebCore/page/PageConsoleClient.cpp:
(WebCore::PageConsoleClient::screenshot):
* Source/WebCore/platform/graphics/ImageBuffer.cpp:
(WebCore::ImageBuffer::putPixelBuffer):
* Source/WebCore/platform/graphics/ImageBuffer.h:
(WebCore::ImageBuffer::putPixelBuffer):
* Source/WebCore/platform/graphics/ImageBufferBackend.cpp:
(WebCore::ImageBufferBackend::

--- a/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
+++ b/Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in
@@ -7855,7 +7855,14 @@ enum class WebCore::RepaintRectCalculation : bool;
     WebCore::PixelBufferFormat format();
     WebCore::IntSize size();
     std::span<const uint8_t> span();
-}
+};
+
+header: <WebCore/PixelBuffer.h>
+[AdditionalEncoder=StreamConnectionEncoder, CreateUsing=create, CustomHeader] class WebCore::PixelBufferSourceView {
+    WebCore::PixelBufferFormat format();
+    WebCore::IntSize size();
+    std::span<const uint8_t> bytes();
+};
 
 #if ENABLE(WEB_AUTHN)
 header: <WebCore/MediationRequirement.h>
