[macOS][GPUP] Address sandbox telemetry for IOKit user client AppleAVDUserClient https://bugs.webkit.org/show_bug.cgi?id=290142
Reviewed by Sihui Liu.

* Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:

Canonical link: https://commits.webkit.org/292650@main

--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -1171,7 +1171,7 @@
         (iokit-user-client-class "AppleAVDUserClient")
         (apply-message-filter
             (allow iokit-external-method
-                (iokit-method-number 0 1 2 3 4))
+                (iokit-method-number 0 1 2 3 4 6))
             (allow iokit-async-external-method
                 (iokit-method-number 8))
             (allow (with report) (with telemetry)
