[macOS][GPUP] Address telemetry for IOKit client RootDomainUserClient https://bugs.webkit.org/show_bug.cgi?id=290130 rdar://147531542
Reviewed by Sihui Liu.

* Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:

Canonical link: https://commits.webkit.org/292656@main

--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -765,6 +765,8 @@
     (allow IOKIT_OPEN_USER_CLIENT
         (iokit-user-client-class "RootDomainUserClient")
         (apply-message-filter
+            (allow iokit-external-method
+                (iokit-method-number 3))
             (allow (with report) (with telemetry)
                 iokit-async-external-method
                 iokit-external-method
