[HDR] Disable SupportHDRDisplay for downlevels https://bugs.webkit.org/show_bug.cgi?id=290190 rdar://147589810
Reviewed by Mike Wyrzykowski.

SupportHDRDisplay was enabled unconditionally for macOS and iOS in 291387@main
because things seem to work reasonably well. But recent reports showed that the
system frameworks of macOS Sequoia and iOS 18 have a few issues with some
HDR formats.

So it is safer to disable it SupportHDRDisplay on down levels and enable it for
future releases of macOS and iOS.

* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebKit/Shared/WebPreferencesDefaultValues.h:
* Tools/DumpRenderTree/TestOptions.cpp:
(WTR::TestOptions::defaults):
* Tools/WebKitTestRunner/TestOptions.cpp:
(WTR::TestOptions::defaults):
Explicitly enable SupportHDRDisplayEnabled for WKR since there is a bug in the
its status value in WebPreferencesDefaultValues.h

Canonical link: https://commits.webkit.org/292660@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -7426,7 +7426,7 @@ StorageBlockingPolicy:
 
 SupportHDRDisplayEnabled:
   type: bool
-  status: stable
+  status: Supporthdrdisplay_feature_status
   category: media
   webcoreOnChange: setNeedsRelayoutAllFrames
   humanReadableName: "Support HDR Display"
@@ -7435,10 +7435,10 @@ SupportHDRDisplayEnabled:
     WebKitLegacy:
       default: false
     WebKit:
-      "PLATFORM(COCOA)": true
+      "ENABLE(SUPPORT_HDR_DISPLAY_BY_DEFAULT)": true
       default: false
     WebCore:
-      "PLATFORM(COCOA)": true
+      "ENABLE(SUPPORT_HDR_DISPLAY_BY_DEFAULT)": true
       default: false
 
 SuppressesIncrementalRendering:
