--- a/Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.serialization.in
+++ b/Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.serialization.in
@@ -25,10 +25,10 @@ headers: "NetworkResourceLoadParameters.h"
 enum class WebKit::PreconnectOnly : bool;
 enum class WebKit::NavigatingToAppBoundDomain : bool;
 
-class WebKit::NetworkLoadParameters {
-    Markable<WebKit::WebPageProxyIdentifier> webPageProxyID;
-    Markable<WebCore::PageIdentifier> webPageID;
-    Markable<WebCore::FrameIdentifier> webFrameID;
+struct WebKit::NetworkResourceLoadParameters {
+    WebKit::WebPageProxyIdentifier webPageProxyID;
+    WebCore::PageIdentifier webPageID;
+    WebCore::FrameIdentifier webFrameID;
     RefPtr<WebCore::SecurityOrigin> topOrigin;
     RefPtr<WebCore::SecurityOrigin> sourceOrigin;
     WTF::ProcessID parentPID;
@@ -54,11 +54,9 @@ class WebKit::NetworkLoadParameters {
     bool allowPrivacyProxy;
     OptionSet<WebCore::AdvancedPrivacyProtections> advancedPrivacyProtections;
     uint64_t requiredCookiesVersion;
-}
 
-class WebKit::NetworkResourceLoadParameters : WebKit::NetworkLoadParameters {
     Markable<WebCore::ResourceLoaderIdentifier> identifier;
-    
+
     RefPtr<WebCore::FormData> request.httpBody();
     std::optional<Vector<WebKit::SandboxExtensionHandle>> sandboxExtensionsIfHttpBody();
 
