--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -1186,9 +1186,11 @@
 
 (when (equal? (param "CPU") "arm64")
     (if (equal? (param "ENABLE_SANDBOX_MESSAGE_FILTER") "YES")
-        (allow IOKIT_OPEN_USER_CLIENT (with report) (with telemetry)
+        (allow IOKIT_OPEN_USER_CLIENT
             (iokit-user-client-class "IOMobileFramebufferUserClient")
             (apply-message-filter
+                (allow iokit-external-method
+                    (iokit-method-number 82 88))
                 (allow (with report) (with telemetry)
                     iokit-async-external-method
                     iokit-external-method
