[macOS][GPUP] Address sandbox telemetry for IOKit user client AppleVideoToolboxParavirtualizationUserClient https://bugs.webkit.org/show_bug.cgi?id=290392 rdar://147846826
Reviewed by Sihui Liu.

* Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:

Canonical link: https://commits.webkit.org/292721@main

--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -91,6 +91,8 @@
     (allow iokit-open-user-client
         (iokit-user-client-class "AppleVideoToolboxParavirtualizationUserClient")
         (apply-message-filter
+            (allow iokit-external-method
+                (iokit-method-number 0 1 2 3 4))
             (allow (with report) (with telemetry)
                 iokit-async-external-method
                 iokit-external-method
