TextIndicator does not move when page layout changes. https://bugs.webkit.org/show_bug.cgi?id=290430 rdar://147885631
Reviewed by Wenson Hsieh.

We lacked a way to update the text indicator when the
page layout changed, so it was possible for the text indicator
to become disconnected from the text that is was indicating.
This code adds a way to update the text indicator, but it
only fixes the problems on mac, and when it is related to page
layout. We also have this issue on iOS and in relation to
scrolling, and those will be fixed separately.

Most of this is plumbing code to allow the text indicator to update,
and we just remake the indicator in the window and the layer
when an update is requested. This could be improved to allow
the animation to be completed when the update happens by just
updating the text on the layer instead of remaking the whole thing.

* Source/WebCore/loader/EmptyClients.cpp:
(WebCore::EmptyChromeClient::updateTextIndicator const):
* Source/WebCore/loader/EmptyClients.h:
* Source/WebCore/page/ChromeClient.h:
* Source/WebCore/page/LocalFrameView.cpp:
(WebCore::LocalFrameView::reset):
(WebCore::LocalFrameView::scrollToFragment):
(WebCore::LocalFrameView::textFragmentIndicatorTimerFired):
(WebCore::LocalFrameView::cancelScheduledTextFragmentIndicatorTimer):
(WebCore::LocalFrameView::scheduleScrollToAnchorAndTextFragment):
(WebCore::LocalFrameView::scrollToTextFragmentRange):
* Source/WebCore/page/LocalFrameView.h:
* Source/WebCore/page/cocoa/WebTextIndicatorLayer.h:
* Source/WebCore/page/cocoa/WebTextIndicatorLayer.mm:
(-[WebTextIndicatorLayer updateWithFrame:textIndicator:margin:offset:updatingIndicator:]):
(-[WebTextIndicatorLayer initWithFrame:textIndicator:margin:offset:]):
* Source/WebCore/page/mac/TextIndicatorWindow.h:
* Source/WebCore/page/mac/TextIndicatorWindow.mm:
(WebCore::TextIndicatorWindow::setTextIndicator):
(WebCore::TextIndicatorWindow::updateTextIndicator):
* Source/WebKit/UIProcess/PageClient.h:
* Source/WebKit/UIProcess/Web

--- a/Source/WebKit/UIProcess/WebPageProxy.messages.in
+++ b/Source/WebKit/UIProcess/WebPageProxy.messages.in
@@ -278,6 +278,7 @@ messages -> WebPageProxy {
 
     # Find messages
     SetTextIndicatorFromFrame(WebCore::FrameIdentifier frameID, struct WebCore::TextIndicatorData indicator, uint64_t lifetime)
+    UpdateTextIndicatorFromFrame(WebCore::FrameIdentifier frameID, struct WebCore::TextIndicatorData indicator)
     ClearTextIndicator()
     DidGetImageForFindMatch(struct WebCore::ImageBufferParameters parameters, WebCore::ShareableBitmapHandle contentImageHandle, uint32_t matchIndex)
 
