Remove NotSerialized members of NetworkResourceLoadParameters https://bugs.webkit.org/show_bug.cgi?id=290456 rdar://147940212
Reviewed by Chris Dumez.

networkProcessAuditToken is only used in the web process, so replace it with
accessing it in NetworkResourceLoadParameters::sandboxExtensionIflocalFile.

blobFileReferences and networkActivityTracker are never set.  They only existed
for NetworkLoadParameters, which has some places where the NetworkLoadParameters
member is set from elsewhere.

I replaced some of the automatic sandbox extension generation with
NetworkResourceLoadParameters::createSandboxExtensionHandlesIfNecessary
called after the request is set to greatly simplify NetworkResourceLoadParameters.

* Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.cpp:
(WebKit::NetworkResourceLoadParameters::sandboxExtensionIflocalFile const):
(WebKit::NetworkResourceLoadParameters::networkLoadParameters const):
* Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.h:
* Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.serialization.in:
* Source/WebKit/WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::scheduleLoadFromNetworkProcess):
(WebKit::WebLoaderStrategy::loadResourceSynchronously):
(WebKit::WebLoaderStrategy::startPingLoad):
(WebKit::WebLoaderStrategy::preconnectTo):
* Source/WebKit/WebProcess/WebCoreSupport/WebLocalFrameLoaderClient.cpp:
(WebKit::WebLocalFrameLoaderClient::sendH2Ping):

Canonical link: https://commits.webkit.org/292731@main

--- a/Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.serialization.in
+++ b/Source/WebKit/NetworkProcess/NetworkResourceLoadParameters.serialization.in
@@ -25,17 +25,15 @@ headers: "NetworkResourceLoadParameters.h"
 enum class WebKit::PreconnectOnly : bool;
 enum class WebKit::NavigatingToAppBoundDomain : bool;
 
-struct WebKit::NetworkResourceLoadParameters {
+[RValue] struct WebKit::NetworkResourceLoadParameters {
     WebKit::WebPageProxyIdentifier webPageProxyID;
     WebCore::PageIdentifier webPageID;
     WebCore::FrameIdentifier webFrameID;
+    [EncodeRequestBody] WebCore::ResourceRequest request;
+
     RefPtr<WebCore::SecurityOrigin> topOrigin;
     RefPtr<WebCore::SecurityOrigin> sourceOrigin;
     WTF::ProcessID parentPID;
-#if HAVE(AUDIT_TOKEN)
-    [NotSerialized] std::optional<audit_token_t> networkProcessAuditToken;
-#endif
-    WebCore::ResourceRequest request;
     
     WebCore::ContentSniffingPolicy contentSniffingPolicy;
     WebCore::ContentEncodingSniffingPolicy contentEncodingSniffingPolicy;
@@ -46,9 +44,7 @@ struct WebKit::NetworkResourceLoadParameters {
     bool needsCertificateInfo;
     bool isMainFrameNavigation;
     std::optional<WebKit::NavigationActionData> mainResourceNavigationDataForAnyFrame;
-    [NotSerialized] Vector<RefPtr<WebCore::BlobDataFileReference>> blobFileReferences;
     WebKit::PreconnectOnly shouldPreconnectOnly;
-    [NotSerialized] std::optional<WebKit::NetworkActivityTracker> networkActivityTracker;
     std::optional<WebKit::NavigatingToAppBoundDomain> isNavigatingToAppBoundDomain;
     bool hadMainFrameMainResourcePrivateRelayed;
     bool allowPrivacyProxy;
@@ -57,10 +53,8 @@ struct WebKit::NetworkResourceLoadParameters {
 
     Markable<WebCore::ResourceLoaderIdentifier> identifier;
 
-    RefPtr<WebCore::FormData> request.httpBody();
-    std::optional<Vector<WebKit::SandboxExtensionHandle>> sandboxExtensionsIfHttpBody();
-
-    std::optional<WebKit::SandboxExtensionHandle> sandboxExtensionIflocalFile();
+    Vector<WebKit::SandboxExtensionHandle> requestBodySandboxExtensions;
+    std::optional<WebKit::SandboxExtensionHandle> resourceSandboxExtension;
 
     Seconds maximumBufferingTime;
     
