REGRESSION(286164@main): HDR images are washed out if SupportHDRDisplayEnabled is off https://bugs.webkit.org/show_bug.cgi?id=290061 rdar://147430003
Reviewed by Simon Fraser.

When transferring the NativeImage to GPUProcess through ShareableBitmap the
image colorSpace is used. After 286164@main and if the colorSpace of the image
UsesITUR_2100TF, ShareableBitmapConfiguration::validateColorSpace() will return
ExtendedSRGB.

Drawing an image with ExtendedSRGB backing store on an sRGB destination context
makes the image look as it is washed out.

To fix this regression, a few things needs to be corrected as well.

1. DestinationColorSpace::usesRec2100TransferFunctions() is not the correct to
   check whether an image has HDR contents or not. This function will return
   false for colorSpace ITUR_2020. The image headroom should be used instead.

2. On macOS, CALayer should be created with the colorSpace of the screen. This
   was the behavior before 284617@main.

3. Layer contentsFormat should be propagated to RemoteDisplayListRecorderProxy
   through RemoteImageBufferSetConfiguration.

4. When transferring a NativeImage to GPUProcess and the Headroom of NativeImage
   is greater than 1 and
   a) The layer contentsFormat is RGBA16F, ExtendedSRGB colorSpace will be used.
   b) On iOS, DisplayP3 colorSpace will be used.
   c) Otherwise SRGB colorSpace will be used.

* Source/WebCore/platform/graphics/DestinationColorSpace.cpp:
(WebCore::DestinationColorSpace::asRGB const):
(WebCore::DestinationColorSpace::usesRec2100TransferFunctions const): Deleted.
* Source/WebCore/platform/graphics/DestinationColorSpace.h:
(WebCore::DestinationColorSpace::usesStandardRange const): Deleted.
* Source/WebCore/platform/graphics/NativeImage.h:
* Source/WebCore/platform/graphics/ShareableBitmap.cpp:
* Source/WebCore/platform/graphics/ShareableBitmap.h:
* Source/WebCore/platform/graphics/cg/ShareableBitmapCG.mm:
(WebCore::ShareableBitmapConfiguration::validateColorSpace):
* Source/WebCore/pla

--- a/Source/WebKit/Shared/graphics/RemoteImageBufferSetConfiguration.serialization.in
+++ b/Source/WebKit/Shared/graphics/RemoteImageBufferSetConfiguration.serialization.in
@@ -28,6 +28,7 @@ header: "RemoteImageBufferSetConfiguration.h"
     WebCore::FloatSize logicalSize;
     float resolutionScale;
     WebCore::DestinationColorSpace colorSpace;
+    WebCore::ContentsFormat contentsFormat;
     WebCore::ImageBufferPixelFormat pixelFormat;
     WebCore::RenderingMode renderingMode;
     WebCore::RenderingPurpose renderingPurpose;
