Implement IDL changes for `hidden=until-found` https://bugs.webkit.org/show_bug.cgi?id=290369 rdar://147940452
Reviewed by Anne van Kesteren and Darin Adler.

Implement:
- Add preference
- IDL changes specified at: https://html.spec.whatwg.org/#htmlelement
- DOM getter/setter algorithms specified at: https://html.spec.whatwg.org/#dom-hidden

* LayoutTests/imported/w3c/web-platform-tests/html/editing/the-hidden-attribute/hidden-idl-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/html/editing/the-hidden-attribute/hidden-until-found-idl-expected.txt:
* Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml:
* Source/WebCore/html/HTMLElement.cpp:
(WebCore::HTMLElement::hidden const):
(WebCore::HTMLElement::setHidden):
* Source/WebCore/html/HTMLElement.h:
* Source/WebCore/html/HTMLElement.idl:

Canonical link: https://commits.webkit.org/292735@main

--- a/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
+++ b/Source/WTF/Scripts/Preferences/UnifiedWebPreferences.yaml
@@ -3469,6 +3469,20 @@ HiddenPageDOMTimerThrottlingEnabled:
     WebCore:
       default: false
 
+HiddenUntilFoundEnabled:
+   type: bool
+   status: testable
+   category: html
+   humanReadableName: "hidden=until-found"
+   humanReadableDescription: "Enable support for hidden=until-found"
+   defaultValue:
+     WebKitLegacy:
+       default: false
+     WebKit:
+       default: false
+     WebCore:
+       default: false
+
 HostedBlurMaterialInMediaControlsEnabled:
   type: bool
   status: internal
