[Cocoa] Pass spatial audio experience preference to the GPU process rdar://147084592 https://bugs.webkit.org/show_bug.cgi?id=290461
Reviewed by Eric Carlson.

Add prefersSpatialAudioExperience to RemoteMediaPlayerProxyConfiguration and initialize
the MediaPlayer in the GPU process with that new value.

Drive-by fix: Replace one instance where we were setting a STSLabel regardless of that prefrence,
and add more logging in updateSpatialTrackingLabel() about the experince we create.

* Source/WebCore/html/HTMLMediaElement.cpp:
* Source/WebCore/platform/audio/cocoa/SpatialAudioExperienceHelper.h:
* Source/WebCore/platform/audio/cocoa/SpatialAudioExperienceHelper.mm:
(WebCore::spatialAudioExperienceDescription):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateAVFoundationObjC.mm:
(WebCore::MediaPlayerPrivateAVFoundationObjC::createAVPlayer):
(WebCore::MediaPlayerPrivateAVFoundationObjC::updateSpatialTrackingLabel):
* Source/WebCore/platform/graphics/avfoundation/objc/MediaPlayerPrivateMediaSourceAVFObjC.mm:
(WebCore::MediaPlayerPrivateMediaSourceAVFObjC::updateSpatialTrackingLabel):
* Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxy.cpp:
(WebKit::RemoteMediaPlayerProxy::RemoteMediaPlayerProxy):
* Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxyConfiguration.h:
* Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxyConfiguration.serialization.in:
* Source/WebKit/WebProcess/GPU/media/RemoteMediaPlayerManager.cpp:
(WebKit::RemoteMediaPlayerManager::createRemoteMediaPlayer):

Canonical link: https://commits.webkit.org/292759@main

--- a/Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxyConfiguration.serialization.in
+++ b/Source/WebKit/GPUProcess/media/RemoteMediaPlayerProxyConfiguration.serialization.in
@@ -50,5 +50,8 @@ struct WebKit::RemoteMediaPlayerProxyConfiguration {
 #if PLATFORM(IOS_FAMILY)
     bool canShowWhileLocked;
 #endif
+#if HAVE(SPATIAL_AUDIO_EXPERIENCE)
+    bool prefersSpatialAudioExperience;
+#endif
 };
 #endif
