[Model Process] Disallow some unix syscalls after process finishes setup https://bugs.webkit.org/show_bug.cgi?id=290487 rdar://139318310
Reviewed by Per Arne Vollan.

Tighten the sandbox after the model process has finished setup by disallowing
some unix syscalls that do not affect the model rendering pipeline.

* Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Model.sb.in:

Canonical link: https://commits.webkit.org/292798@main

--- a/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Model.sb.in
+++ b/Source/WebKit/Resources/SandboxProfiles/ios/com.apple.WebKit.Model.sb.in
@@ -30,14 +30,13 @@
 
 (allow syscall-unix
     (syscall-number
-        SYS_getsockname
-        SYS_getpeername
-        SYS_getsockopt
         SYS_recvmsg
-        SYS_sendmsg
-        SYS_setsockopt
     ))
-
-;; FIXME: Remove after rdar://138963941 is addressed
-(deny syscall-unix (with no-report) (syscall-number SYS_necp_open))
-(deny syscall-unix (with no-report) (syscall-number SYS_necp_client_action))
+(with-filter (require-not (webcontent-process-launched))
+    (allow syscall-unix
+        (syscall-number
+            SYS_getsockname
+            SYS_getpeername
+            SYS_getsockopt
+            SYS_setsockopt)))
+(deny syscall-unix (with no-report))
