--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -1175,9 +1175,9 @@
         (iokit-user-client-class "AppleAVDUserClient")
         (apply-message-filter
             (allow iokit-external-method
-                (iokit-method-number 0 1 2 3 4 6))
+                (iokit-method-number 0 1 2 3 4 5 6))
             (allow iokit-async-external-method
-                (iokit-method-number 8))
+                (iokit-method-number 7 8))
             (allow (with report) (with telemetry)
                 iokit-async-external-method
                 iokit-external-method
