[macOS][GPUP] Address sandbox telemetry for IOKit client IOSurfaceAcceleratorClient https://bugs.webkit.org/show_bug.cgi?id=290557 rdar://148044448
Reviewed by Sihui Liu.

* Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in:

Canonical link: https://commits.webkit.org/292820@main

--- a/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
+++ b/Source/WebKit/GPUProcess/mac/com.apple.WebKit.GPUProcess.sb.in
@@ -1208,7 +1208,7 @@
             (iokit-user-client-class "IOSurfaceAcceleratorClient")
             (apply-message-filter
                 (allow iokit-external-method
-                    (iokit-method-number 10))
+                    (iokit-method-number 1 4 10))
                 (allow (with report) (with telemetry)
                     iokit-async-external-method
                     iokit-external-method
